--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,90 +1,107 @@
 .head{
 }
 .head > h1{
-    font-size: 22px;
-    font-family: Arial; 
-    color: #3333ff;
-    text-align: center;
-    padding-top: 20px; 
+  font-size: 22px;
+  font-family: Arial; 
+  color: #3333ff;
+  text-align: center;
+  padding-top: 20px; 
 }
 
 .wrapper{
-    margin: 50px auto;
-    width: 600px;
-    height: 600px;
-    background-color:#ccccff;
+  margin: 50px auto;
+  width: 600px;
+  height: 600px;
+  background-color:#ccccff;
 }
 #c{
-    margin-top: 50px;
-    margin-left: 30px; 
-    float: left; 
-    width: 300px;
-    height: 300px;
-    background-color: white; 
+  margin-top: 50px;
+  margin-left: 30px; 
+  float: left; 
+  width: 300px;
+  height: 300px;
+  background-color: white; 
 
 }
 .menu{
-    float: right;
-    height: 300px;
-    width: 200px;
-    margin-top: 50px;
-    margin-right: 20px;
-    background-color:#cccccc; 
+  float: right;
+  height: 300px;
+  width: 200px;
+  margin-top: 50px;
+  margin-right: 20px;
+  background-color:#cccccc; 
 }
 .menu > h1{
-    font-size: 20px;
-    color:#000033; 
-    text-align: center;
+  font-size: 20px;
+  color:#000033; 
+  text-align: center;
 }
 
 .option{
 
 }
 .bt_1{
-    margin-left: 25px; 
-    font-size: 18px; 
-    margin-bottom: 20px; 
-    margin-top: 30px;
+  margin-left: 25px; 
+  font-size: 18px; 
+  margin-bottom: 20px; 
+  margin-top: 30px;
 
 }
 #text1{
-    margin-left:25px;
-    width: 150px;
-    padding: 0px;
-    margin-top: 0px; 
-    height: 20px;
+  margin-left:25px;
+  width: 150px;
+  padding: 0px;
+  margin-top: 0px; 
+  height: 20px;
 }
 #text2{
-    margin-left:25px;
-    margin-top: 30px; 
-    width: 150px;
-    padding: 0px;
-    margin-top: 0px; 
-    height: 20px;
+  margin-left:25px;
+  margin-top: 30px; 
+  width: 150px;
+  padding: 0px;
+  margin-top: 0px; 
+  height: 20px;
 }
-.buttons{
-    width: 300px;
-    height: 80px; 
-    float: left;
-    margin-left: 30px; 
-    margin-top: 20px; 
-    background-color:#cccccc;
-}
-
-.label_bg{
-    margin-left: 40px;
-}
-.label_bg > p{
-    font-size: 18px; 
-    margin:0px;
-    padding: 0px;
-    width: 170px; 
-    height: 30px; 
-    text-align: center;
-    font-family: Arial;
-    padding-top: 10px; 
-}
-.getval{
-    margin-bottom: 15px; 
+.menu2{
+  width: 300px;
+  height: 150px; 
+  float: left;
+  margin-left: 30px; 
+  margin-top: 20px; 
+  background-color:#cccccc;
 }
 
+.label{
+  margin:0 auto; 
+  height: 40px;
+  width: 200px; 
+}
+.label > p{
+  font-size: 18px; 
+  margin:0px;
+  padding: 0px;
+  width: 170px; 
+  height: 30px; 
+  text-align: center;
+  font-family: Arial;
+  padding-top: 10px; 
+}
+#getval{
+  margin-bottom: 10px; 
+  margin-left:40px; 
+}
+#download {
+  cursor:pointer;
+  color: blue; 
+  padding:3px;
+  margin-left: 65px; 
+  margin-top: 10px; 
+  height: 30px;
+  width: 150px;
+  background-color:#ccccff;
+  border: 1px solid black;  
+  
+}
+#download:hover {
+  color:#fff;
+}
